<?xml version="1.0"?>
<package format="2">
  <name>sensor_pkg</name>
  <version>0.1.0</version>
  <description>The sensor_pkg package</description>

  <maintainer email="lucas.combe@gmail.com">lucas</maintainer>

  <license>BSD</license>

  <author email="lucas.combe@gmail.com">Lucas Combe</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>sys</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>time</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
